created  first and second sections
add  logo  and  make  navigation.  write  paragraph  add main -poto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,69 @@
     <title>TeamWork-2</title>
 </head>
 <body>
+    <section class="first_section">
+        <div class="main_image">
+            <header class="navbar header_wrapper">
+                    <a href="#">
+                        <img src="images/logo.png" alt="">
+                    </a>
+                    <nav>
+                        <ul class="navbar">
+                            <li>
+                                <a href="#">VISION & MISSION</a>
+                            </li>
+                            <li>
+                                <a href="#">PROJETS</a>
+                            </li>
+                            <li>
+                                <a href="#">EQUIPE</a>
+                            </li>
+                            <li>
+                                <a href="#">CONTACT</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+            </header>
+            <p class="main_title">
+                NOS METHODES DE TRAVAIL POUR RENDRE LE MONDE MEILLEUR
+            </p>
+        </div>
+    </section>
+<section class="second_section">
+        <div class="container">
+            <div class="first_box">
+                <h3>Du point de vue de l’équipe</h3>
+                <p>
+                    Mettre en place une culture du télétravail au sein d’une équipe qui a toujours travaillé sur site n’est pas une tâche facile. Azendoo, 
+                    c’est une équipe de 25 personnes qui travaillent depuis bientôt 5 ans dans le même bureau à Bordeaux. Mais récemment certains d’entre 
+                    nous ont du déménager de Bordeaux pour des raisons personnelles.
+                </p>
+            </div>
+            <div class="second_box">
+                <h2>CREER DES ROUTINES POUR VOTRE EQUIPE</h2>
+                <p>
+                    Même si vos collaborateurs ne se côtoient pas tous les jours il est très important de maintenir des liens entre chacun. 
+                    Vous devez donc instaurer des moments quotidiens ou hebdomadaires afin de regrouper toute votre équipe pour un call ou pour partager une information. Ainsi, 
+                    vous vous assurez que tout le monde avance dans la même direction. 
+                    <br>
+                    <br>
+                    Par exemple vous pouvez organiser chaque lundi matin une réunion stand up (en visio-conférence pour les télétravailleurs) où chacun partage ses objectifs de la semaine.
+                </p>
+
+                <h2>MONTER DES DUOS DE TRAVAIL</h2>
+                <p>
+                    Si une partie de votre équipe travaille à distance, le meilleur moyen de renforcer les liens entre les membres de votre équipe est de créer des équipes de travail de deux. 
+                    Ces équipes travailleront en binôme sur un ou plusieurs projets, les poussant à mieux communiquer et se sentir indispensable au bon avancement du projet.
+                </p>
+            </div>
+            <img src="images/image2.jpg" alt="">
+        </div>
+    </section>
     
 </body>
 </html>
