--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
         </div>
     </section>
-<section class="second_section">
+    <section class="second_section">
         <div class="container">
             <div class="first_box">
                 <h3>Du point de vue de l’équipe</h3>
@@ -69,6 +69,60 @@
                 </p>
             </div>
             <img src="images/image2.jpg" alt="">
+        </div>
+    </section>
+    <section class="third_section">
+        <div class="container">
+            <div class="second_box third_box">
+                <h2>CREER DES ROUTINES POUR VOTRE EQUIPE</h2>
+                <p>
+                    Même si vos collaborateurs ne se côtoient pas tous les jours il est très important de maintenir des liens entre chacun. 
+                    Vous devez donc instaurer des moments quotidiens ou hebdomadaires afin de regrouper toute votre équipe pour un call ou pour partager une information. Ainsi, 
+                    vous vous assurez que tout le monde avance dans la même direction. 
+                    <br>
+                    <br>
+                    Par exemple vous pouvez organiser chaque lundi matin une réunion stand up (en visio-conférence pour les télétravailleurs) où chacun partage ses objectifs de la semaine.
+                </p>
+
+                <h2>MONTER DES DUOS DE TRAVAIL</h2>
+                <p>
+                    Si une partie de votre équipe travaille à distance, le meilleur moyen de renforcer les liens entre les membres de votre équipe est de créer des équipes de travail de deux. 
+                    Ces équipes travailleront en binôme sur un ou plusieurs projets, les poussant à mieux communiquer et se sentir indispensable au bon avancement du projet.
+                </p>
+            </div>
+            <img src="images/image3.jpg" alt="">
+            <div class="bottom_title">
+                <div class="box_title">
+                    <h2>
+                        ET ENCORE ?
+                    </h2>
+                    <p>
+                        Switch c’est une équipe transdisciplinaire composée <br> de <br> professionnels des médias,
+
+                         de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+                    </p>
+                </div>
+                <div class="box_title box_title_2">
+                    <p>
+                        Switch c’est une équipe transdisciplinaire composée <br> de <br> professionnels des médias
+                        de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container_bluebox">
+            <div class="blue_box_title">
+                <h2>
+                    CONCLUSION
+                </h2>
+                <p>
+                    En effet travailler depuis chez vous vous fera moins bouger. Vous n’allez plus que de votre lit, 
+                    à votre machine à café puis à votre bureau. Donc vous devez vous forcer à bouger pour garder votre corps éveillé. 
+                    Que ce soit un footing le matin, une balade à midi ou un tour de vélo le soir,
+                    planifiez chaque jour au moins 30 minutes pour sortir et bouger.
+                </p>
+            </div>
         </div>
     </section>
     
